read optional geo:lat,long in SURVEY.DEF and store coords.

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -5756,7 +5756,8 @@ because the simulation internally defines a spectrograph with 10{\AA} bins
 and SNR${\sim}10^5$. The simulation creates an ideal spectrum,
 corresponding to the true SED, for each observation
 that occurs at least 1~hr later than the previous observation.
-
+BEWARE to define reasonable {\tt GENRANGE\_TREST} and {\tt NGENTOT\_LC} 
+to avoid excessively large output data files.
 
 % ------------------------------------
 
