fix sntable_dump sections in manaul

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -141,7 +141,7 @@
 \newcommand{\wwwMINUIT}{http://wwwasdoc.web.cern.ch/wwwasdoc/minuit/minmain.html}
 \newcommand{\minuit}{{\sc minuit}}
 
-\newcommand{\sndump}{{\tt sntable\_dump.pl}}
+\newcommand{\sndump}{{\tt sntable\_dump.py}}
 \newcommand{\SNmix}{\tt sim\_SNmix.pl}
 \newcommand{\splitFit}{\tt split\_and\_fit.pl}
 \newcommand{\submit}{\tt submit\_batch\_jobs.sh}
@@ -2330,9 +2330,9 @@ in the light curve fitting program ({\tt snlc\_fitexe}).
 This feature produces information
 for each \obs\ in {\tt ROOT} or {\tt HBOOK} format.
 The epoch information can be extracted into {\tt TEXT} format
-using the {\tt sntable\_dump.pl} utulity (\S\ref{sss:sntable_dump}):
+using the {\tt sntable\_dump.py} utulity (\S\ref{sss:sntable_dump}):
 \begin{verbatim}
-   sntable_dump.pl  myFile.root  FITRES  obs
+   sntable_dump.py  myFile.root  FITRES  obs
 \end{verbatim}
 A few of the output variables must be converted for the
 {\tt FLUXERRMAP}:
@@ -8222,7 +8222,7 @@ variables
 %
 where this table is created with {\tt LTUP\_SNANA=T}
 (\S\ref{subsec:anavar}) and the variables can be
-extracted into text format using the {\tt sntable\_dump.pl}
+extracted into text format using the {\tt sntable\_dump.py}
 utility (\S\ref{sss:sntable_dump}).
 {\tt CUTFLAG\_SNANA}$=1$ means that the snana cut-requirements
 were satisfied, but the fit either failed or was not attempted.
@@ -12897,39 +12897,39 @@ analysis platform then {\sndump} can be used to
 extract table information into text format.
 
 The script usage is explained at the top of
-{\tt \&SNANA\_DIR/util/sntable\_dump.pl},
+{\tt \&SNANA\_DIR/util/sntable\_dump.py},
 and here we illustrate its basic features:
 \begin{enumerate}
   \item Print list of {\tt SNTABLE} variables: 
        \begin{verbatim}
-          sntable_dump.pl  myjob.root   SNANA
-          sntable_dump.pl  myjob.root   FITRES
+          sntable_dump.py  myjob.root   SNANA
+          sntable_dump.py  myjob.root   FITRES
        \end{verbatim}
 %
   \item For an arbitrary set of table variables, 
         extract SN values  into a fitres-formatted text file:
        \begin{verbatim}
-       sntable_dump.pl  myjob.root  SNANA  -v RA DEC SNRMAX_r
-       sntable_dump.pl  myjob.root  FITRES -v m0obs_g m0obs_r
+       sntable_dump.py  myjob.root  SNANA  -v RA,DEC,SNRMAX_r
+       sntable_dump.py  myjob.root  FITRES -v m0obs_g,m0obs_r
        \end{verbatim}
 %
   \item Append an existing text file with variables from a {\tt SNTABLE}:
        \begin{verbatim}
- sntable_dump.pl  myjob.root  SNANA  -v RA DEC SNRMAX_r -a MYJOB.FITRES
- sntable_dump.pl  myjob.root  FITRES -v m0obs_g m0obs_r  -a MYJOB.FITRES
+ sntable_dump.py  myjob.root  SNANA  -v RA,DEC,SNRMAX_r  -a MYJOB.FITRES
+ sntable_dump.py  myjob.root  FITRES -v m0obs_g,m0obs_r  -a MYJOB.FITRES
        \end{verbatim}
 %
   \item Dump epoch-list of dataFlux-fitFLux  outliers:
        \begin{verbatim}
- sntable_dump.pl  myjob.root   FITRES --outlier  3  99
- sntable_dump.pl  myjob.root   FITRES --outlier  3  99 -v FITPROB SNRMAX3
+ sntable_dump.py  myjob.root   FITRES --outlier  3  99
+ sntable_dump.py  myjob.root   FITRES --outlier  3  99 -v FITPROB,SNRMAX3
        (print epochs to ascii file with 3 < Nsigma < 99)
        \end{verbatim}
 %
   \item Dump epoch-list of dataFlux-simFLux  outliers (sim only):
        \begin{verbatim}
- sntable_dump.pl  myjob.root   FITRES --outlier_sim  3  99
- sntable_dump.pl  myjob.root   FITRES --outlier_Sim  3  99 -v FITPROB SNRMAX3
+ sntable_dump.py  myjob.root   FITRES --outlier_sim  3  99
+ sntable_dump.py  myjob.root   FITRES --outlier_Sim  3  99 -v FITPROB,SNRMAX3
        (print epochs to ascii file with 3 < Nsigma < 99)
        \end{verbatim}
 %
@@ -12938,7 +12938,7 @@ and here we illustrate its basic features:
       where $\sigSIM$ is the calculated error and $\sigma_F$ is the 
       reported error.
        \begin{verbatim}
-   sntable_dump.pl  myjob.root   FITRES  obs
+   sntable_dump.py  myjob.root   FITRES  --OBS
        \end{verbatim}
 \end{enumerate}
 %
