more true SED write fixes, including fix to write end-of-spec markers (-777)

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -5360,7 +5360,7 @@ Here are few warnings:
   \item if true flux is negative, it is suppressed in the output. 
         So beware of \spec\ wavelength holes, 
         particularly at early epochs and the UV.
-        To replace negative fluxes with zero, set {\tt GENOPT\_MSKOPT=16}.
+        To replace negative fluxes with zero, set {\tt GENMODEL\_MSKOPT=16}.
 %
   \item there are no \snana\ programs which read the simulated spectra.
   \item Units: $\Flam$~, erg/s/cm$^2$/\AA.
